--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+    <!-- NAVBAR -->
+    <nav class="navbar">
+        <ul>
+            <li>Pengumuman</li>
+            <li>Forkafest</li>
+            <li>Prestasi</li>
+            <li>Tentang Kami</li>
+            <li>Agenda</li>
+            <li>Alur Pendaftaran</li>
+            <li>Beranda</li>
+        </ul>
+    </nav>
 </body>
 </html>
