--- a/index.html
+++ b/index.html
@@ -1,24 +1,296 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="slider.css">
+  <link rel="stylesheet" href="responsif.css">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    nav {
+      position: fixed;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #f8f8f8;
+      padding: 20px;
+      z-index: 2;
+      width: 100vw;
+    }
+
+    .nav-links {
+      display: flex;
+      justify-content: space-around;
+      width: 50%;
+    }
+
+    .nav-links li {
+      list-style: none;
+    }
+
+    .nav-links a {
+      text-decoration: none;
+      color: #333;
+      padding: 8px 12px;
+      border-radius: 5px;
+      transition: background-color 0.3s ease;
+    }
+
+    .nav-links a:hover {
+      background-color: #ddd;
+    }
+
+    .burger {
+      display: none;
+      flex-direction: column;
+      cursor: pointer;
+    }
+
+    .burger div {
+      width: 25px;
+      height: 3px;
+      background-color: #333;
+      margin: 3px;
+      transition: all 0.5s ease-in-out;
+    }
+
+    @media screen and (max-width: 768px) {
+      nav {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background-color: #f8f8f8;
+        padding: 20px;
+      }
+
+      .burger {
+        display: flex;
+        z-index: 2;
+      }
+
+      .nav-links {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        opacity: 0;
+        transform: translateY(-100%);
+        position: absolute;
+        padding: 10px;
+        top: 67px;
+        left: 0;
+        width: 100%;
+        background-color: #f8f8f8;
+        transition: all 0.5s ease-in-out;
+      }
+
+      .nav-links.nav-active {
+        opacity: 1;
+
+        transform: translateY(0%);
+      }
+
+      .nav-links li {
+        opacity: 0;
+        padding: 10px;
+        transform: translateY(-20px);
+        transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+      }
+
+      .nav-links.nav-active li {
+        opacity: 1;
+        transform: translateY(0);
+      }
+
+      .nav-links li:nth-child(1) {
+        transition-delay: 0.2s;
+      }
+
+      .nav-links li:nth-child(2) {
+        transition-delay: 0.4s;
+      }
+
+      .nav-links li:nth-child(3) {
+        transition-delay: 0.6s;
+      }
+
+      .nav-links li:nth-child(4) {
+        transition-delay: 0.8s;
+      }
+
+      .burger.open .line:nth-child(1) {
+        transform: rotate(-45deg) translate(-7px, 6px);
+      }
+
+      .burger.open .line:nth-child(2) {
+        opacity: 0;
+      }
+
+      .burger.open .line:nth-child(3) {
+        transform: rotate(45deg) translate(-6px, -6px);
+      }
+    }
+  </style>
 </head>
+
 <body>
-    <!-- NAVBAR -->
-    <nav class="navbar">
-        <ul>
-            <li>Pengumuman</li>
-            <li>Forkafest</li>
-            <li>Prestasi</li>
-            <li>Tentang Kami</li>
-            <li>Agenda</li>
-            <li>Alur Pendaftaran</li>
-            <li>Beranda</li>
-        </ul>
-    </nav>
+  <!-- NAVBAR -->
+  <nav>
+    <div class="logo" style="margin-right: 30px;">
+      <a href="#">Your Logo</a>
+    </div>
+    <ul class="nav-links">
+      <li><a href="#">Bernda</a></li>
+      <li><a href="#">Tentang kami</a></li>
+      <li><a href="#">Prestasi</a></li>
+      <li><a href="#">Pendaftaran</a></li>
+    </ul>
+    <div class="burger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
+    </div>
+  </nav>
+
+  <main>
+    <!-- slider -->
+    <section>
+      <style>
+        .slider-content .content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 100%;
+}
+
+.slider-content .content > div {
+  width: 50%;
+  padding: 20px;
+  box-sizing: border-box;
+}
+      </style>
+      <div class="container-c">
+        <div class="slider">
+          <div class="slider-content">
+            <figure class="show">
+              <img
+                src="https://images.unsplash.com/photo-1506619216599-9d16d0903dfd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8bWluaW1hbHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1280&h=720"
+                alt="Coffee">
+              <div class="content">
+                <div class="col-6" style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
+                  <h2>Title 1</h2>
+                  <p>Content 1</p>
+                </div>
+                <div class="col-6" style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
+                  <h2>Title 2</h2>
+                  <p>Content 2</p>
+                </div>
+              </div>
+            </figure>
+            <figure>
+              <img
+                src="https://images.unsplash.com/photo-1513506003901-1e6a229e2d15?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTR8fG1pbmltYWx8ZW58MHx8MHx8&auto=format&fit=crop&w=1280&h=720"
+                alt="Lamp">
+            </figure>
+            <figure>
+              <img
+                src="https://images.unsplash.com/photo-1546387903-6d82d96ccca6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTh8fG1pbmltYWx8ZW58MHx8MHx8&auto=format&fit=crop&w=1280&h=720"
+                alt="Plant">
+            </figure>
+          </div>
+          <div class="slider-navigation">
+            <button>
+              <i class="fa-solid fa-chevron-left"></i>
+            </button>
+            <button>
+              <i class="fa-solid fa-chevron-right"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <script>
+    const burger = document.querySelector('.burger');
+    const navLinks = document.querySelector('.nav-links');
+
+    burger.addEventListener('click', () => {
+      navLinks.classList.toggle('nav-active');
+      burger.classList.toggle('open');
+    });
+  </script>
+  <script>
+    var count = 0;
+    var directions = {
+      prev: 0,
+      next: 1
+    }
+
+    var prevButton = document.querySelector(".slider-navigation button:first-child");
+    var nextButton = document.querySelector(".slider-navigation button:last-child");
+    var sliders = document.querySelectorAll(".slider-content figure");
+
+    initListeners();
+
+    function initListeners() {
+      nextButton.addEventListener("click", onNavigationClick);
+      prevButton.addEventListener("click", onNavigationClick);
+    }
+
+    function onNavigationClick(e) {
+      var currentButton = e.target;
+      var index = getElementIndex(e.target);
+      var controlledCount = countController(index);
+
+      var oldSlideItem = sliders[controlledCount.old];
+      var newSlideItem = sliders[controlledCount.new];
+
+      oldSlideItem.classList.remove("show");
+      currentButton.classList.add("disabled");
+
+      var showNextSliderItemInterval = setInterval(function () {
+        newSlideItem.classList.add("show");
+        currentButton.classList.remove("disabled");
+        clearInterval(showNextSliderItemInterval);
+      }, 500);
+    }
+
+    function countController(directionIndex) {
+      var result = { new: 0, old: count };
+      var max = sliders.length;
+
+      if (directionIndex === directions.next) {
+        count = count === max - 1 ? 0 : (count + 1);
+      }
+
+      if (directionIndex === directions.prev) {
+        count = count === 0 ? (max - 1) : (count - 1);
+      }
+
+      result.new = count;
+
+      return result;
+    }
+
+    function getElementIndex(element) {
+      return Array.from(element.parentElement.children).indexOf(element);
+    }
+  </script>
 </body>
+
 </html>
