--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       box-sizing: border-box;
     }
 
+    body {
+      overflow-x: hidden;
+    }
+
     nav {
       position: fixed;
       display: flex;
@@ -168,20 +172,26 @@
     <section>
       <style>
         .slider-content .content {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
-  height: 100%;
-}
+          position: absolute;
+          top: 0;
+          left: 0;
+          display: flex;
+          flex-wrap: wrap;
+          width: 100%;
+          height: 100%;
+        }
 
-.slider-content .content > div {
-  width: 50%;
-  padding: 20px;
-  box-sizing: border-box;
-}
+        .slider-content .content>div {
+          padding: 20px;
+          box-sizing: border-box;
+        }
+
+        @media (max-width: 767px) {
+          .slider-content .content>div {
+            width: 100%;
+            float: none;
+          }
+        }
       </style>
       <div class="container-c">
         <div class="slider">
@@ -191,11 +201,13 @@
                 src="https://images.unsplash.com/photo-1506619216599-9d16d0903dfd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8bWluaW1hbHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1280&h=720"
                 alt="Coffee">
               <div class="content">
-                <div class="col-6" style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
+                <div class="col-md-6"
+                  style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
                   <h2>Title 1</h2>
                   <p>Content 1</p>
                 </div>
-                <div class="col-6" style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
+                <div class="col-md-6"
+                  style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
                   <h2>Title 2</h2>
                   <p>Content 2</p>
                 </div>
@@ -221,6 +233,12 @@
             </button>
           </div>
         </div>
+      </div>
+    </section>
+    <!-- about -->
+    <section>
+      <div class="container" style="min-height: 100vh;">
+
       </div>
     </section>
   </main>
