--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>TI</title>
+  <link rel="icon" type="image/svg+xml"
+    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22256%22 height=%22256%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 rx=%2250%22 fill=%22%232da6ff%22></rect><path d=%22M60.80 22.73L60.80 22.73Q61.25 23.45 61.65 24.66Q62.06 25.88 62.06 27.32L62.06 27.32Q62.06 29.75 60.93 31.01Q59.81 32.27 57.83 32.27L57.83 32.27L45.41 32.27L45.41 77.27Q44.69 77.45 43.16 77.72Q41.63 77.99 40.01 77.99L40.01 77.99Q36.59 77.99 35.15 76.73Q33.71 75.47 33.71 72.50L33.71 72.50L33.71 32.27L18.59 32.27Q18.14 31.46 17.73 30.29Q17.33 29.12 17.33 27.68L17.33 27.68Q17.33 25.16 18.45 23.95Q19.58 22.73 21.56 22.73L21.56 22.73L60.80 22.73ZM77.27 77.99L77.27 77.99Q73.85 77.99 72.41 76.73Q70.97 75.47 70.97 72.50L70.97 72.50L70.97 22.73Q71.78 22.55 73.31 22.28Q74.84 22.01 76.37 22.01L76.37 22.01Q79.61 22.01 81.14 23.18Q82.67 24.35 82.67 27.50L82.67 27.50L82.67 77.27Q81.86 77.45 80.38 77.72Q78.89 77.99 77.27 77.99Z%22 fill=%22%23fff%22></path></svg>" />
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
@@ -213,7 +215,6 @@
                       }
                     </style>
                   <h1 class="title">Teknik Informatika</h1>
-                  <hr>
                   <p>Unversitas Muhammadiyah Jember</p>
                   </div>
                 </div>
