--- a/index.html
+++ b/index.html
@@ -15,138 +15,8 @@
   <link rel="stylesheet" href="slider.css">
   <link rel="stylesheet" href="responsif.css">
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
 
-    body {
-      overflow-x: hidden;
-    }
 
-    nav {
-      position: fixed;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: #f8f8f8;
-      padding: 20px;
-      z-index: 2;
-      width: 100vw;
-    }
-
-    .nav-links {
-      display: flex;
-      justify-content: space-around;
-      width: 50%;
-    }
-
-    .nav-links li {
-      list-style: none;
-    }
-
-    .nav-links a {
-      text-decoration: none;
-      color: #333;
-      padding: 8px 12px;
-      border-radius: 5px;
-      transition: background-color 0.3s ease;
-    }
-
-    .nav-links a:hover {
-      background-color: #ddd;
-    }
-
-    .burger {
-      display: none;
-      flex-direction: column;
-      cursor: pointer;
-    }
-
-    .burger div {
-      width: 25px;
-      height: 3px;
-      background-color: #333;
-      margin: 3px;
-      transition: all 0.5s ease-in-out;
-    }
-
-    @media screen and (max-width: 768px) {
-      nav {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        background-color: #f8f8f8;
-        padding: 20px;
-      }
-
-      .burger {
-        display: flex;
-        z-index: 2;
-      }
-
-      .nav-links {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        opacity: 0;
-        transform: translateY(-100%);
-        position: absolute;
-        padding: 10px;
-        top: 67px;
-        left: 0;
-        width: 100%;
-        background-color: #f8f8f8;
-        transition: all 0.5s ease-in-out;
-      }
-
-      .nav-links.nav-active {
-        opacity: 1;
-
-        transform: translateY(0%);
-      }
-
-      .nav-links li {
-        opacity: 0;
-        padding: 10px;
-        transform: translateY(-20px);
-        transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
-      }
-
-      .nav-links.nav-active li {
-        opacity: 1;
-        transform: translateY(0);
-      }
-
-      .nav-links li:nth-child(1) {
-        transition-delay: 0.2s;
-      }
-
-      .nav-links li:nth-child(2) {
-        transition-delay: 0.4s;
-      }
-
-      .nav-links li:nth-child(3) {
-        transition-delay: 0.6s;
-      }
-
-      .nav-links li:nth-child(4) {
-        transition-delay: 0.8s;
-      }
-
-      .burger.open .line:nth-child(1) {
-        transform: rotate(-45deg) translate(-7px, 6px);
-      }
-
-      .burger.open .line:nth-child(2) {
-        opacity: 0;
-      }
-
-      .burger.open .line:nth-child(3) {
-        transform: rotate(45deg) translate(-6px, -6px);
-      }
-    }
   </style>
 </head>
 
@@ -172,29 +42,6 @@
   <main>
     <!-- slider -->
     <section>
-      <style>
-        .slider-content .content {
-          position: absolute;
-          top: 0;
-          left: 0;
-          display: flex;
-          flex-wrap: wrap;
-          width: 100%;
-          height: 100%;
-        }
-
-        .slider-content .content>div {
-          padding: 20px;
-          box-sizing: border-box;
-        }
-
-        @media (max-width: 767px) {
-          .slider-content .content>div {
-            width: 100%;
-            float: none;
-          }
-        }
-      </style>
       <div class="container-c">
         <div class="slider">
           <div class="slider-content">
@@ -264,86 +111,15 @@
       </div>
     </section>
   </main>
+  <script>
+    const burger = document.querySelector('.burger');
+    const navLinks = document.querySelector('.nav-links');
 
-<script>
-  var count = 0;
-  var directions = {
-    prev: 0,
-    next: 1
-  }
-
-  var prevButton = document.querySelector(".slider-navigation button:last-child");
-  var nextButton = document.querySelector(".slider-navigation button:last-child");
-  var sliders = document.querySelectorAll(".slider-content figure");
-  var autoSlideInterval;
-
-  initListeners();
-  startAutoSlide();
-
-  function initListeners() {
-    nextButton.addEventListener("click", onNavigationClick);
-    prevButton.addEventListener("click", onNavigationClick);
-  }
-
-  function onNavigationClick(e) {
-    var currentButton = e.target;
-    var index = getElementIndex(e.target);
-    var controlledCount = countController(index);
-
-    var oldSlideItem = sliders[controlledCount.old];
-    var newSlideItem = sliders[controlledCount.new];
-
-    oldSlideItem.classList.remove("show");
-    currentButton.classList.add("disabled");
-
-    var showNextSliderItemInterval = setInterval(function () {
-      newSlideItem.classList.add("show");
-      currentButton.classList.remove("disabled");
-      clearInterval(showNextSliderItemInterval);
-    }, 500);
-  }
-
-  function countController(directionIndex) {
-    var result = { new: 0, old: count };
-    var max = sliders.length;
-
-    if (directionIndex === directions.next) {
-      count = count === max - 1 ? 0 : (count + 1);
-    }
-
-    if (directionIndex === directions.prev) {
-      count = count === 0 ? (max - 1) : (count - 1);
-    }
-
-    result.new = count;
-
-    return result;
-  }
-
-  function getElementIndex(element) {
-    return Array.from(element.parentElement.children).indexOf(element);
-  }
-
-  function startAutoSlide() {
-    autoSlideInterval = setInterval(function () {
-      var newIndex = count < sliders.length - 1 ? count + 1 : 0;
-      var currentButton = nextButton;
-      var controlledCount = countController(directions.next);
-
-      var oldSlideItem = sliders[controlledCount.old];
-      var newSlideItem = sliders[controlledCount.new];
-
-      oldSlideItem.classList.remove("show");
-      currentButton.classList.add("disabled");
-
-      var showNextSliderItemInterval = setInterval(function () {
-        newSlideItem.classList.add("show");
-        currentButton.classList.remove("disabled");
-        clearInterval(showNextSliderItemInterval);
-      }, 500);
-    }, 5000);
-  }
-</script>
+    burger.addEventListener('click', () => {
+      navLinks.classList.toggle('nav-active');
+      burger.classList.toggle('open');
+    });
+  </script>
 
 </body>
 
