--- a/index.html
+++ b/index.html
@@ -15,14 +15,34 @@
   <link rel="stylesheet" href="slider.css">
   <link rel="stylesheet" href="responsif.css">
   <style>
+      body::-webkit-scrollbar {
+        width: 0.5em;
+      }
 
+      body::-webkit-scrollbar-track {
+        background: #242424;
+        -webkit-box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.3);
+      }
 
+      body::-webkit-scrollbar-thumb {
+        background-color: rgb(112, 190, 180);
+        outline: 1px solid rgb(0, 89, 255);
+      }
+      .scrolled {
+        background-color: rgb(112, 190, 180);
+        width: auto;
+        margin: 5px 20px 0 20px !important;
+        border-radius: 40px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2) !important;
+        transition: all 0.5s ease-in-out ;
+      }
+      
   </style>
 </head>
 
 <body>
   <!-- NAVBAR -->
-  <nav>
+  <nav class="navbar">
     <div class="logo" style="margin-right: 30px;">
       <a href="#">Your Logo</a>
     </div>
@@ -92,19 +112,13 @@
       </div>
     </section>
     <!-- about -->
-    <style>
-      .desc {
-        /* justify */
-        text-align: justify;
-      }
-    </style>
     <section style="background-color: #f8f8f8 !important;">
       <div class="container" style="min-height: 100vh; display: flex; justify-content: center; align-items: center;">
-        <div class="col-md-6" style="padding: 10px;">
-            <img src="https://images.unsplash.com/photo-1506619216599-9d16d0903dfd?ixlib=rb-1.2.1&auto=format&fit=crop&w=1280&h=720"
+        <div class="col-md-6" style="padding: 10px 100px;">
+            <img src="assets/img/test.png"
               alt="Coffee" class="img-fluid rounded-circle">
         </div>
-        <div class="col-md-6" style="padding: 10px;">
+        <div class="col-md-6" style="padding: 0 50px;">
           <h3>Tentang</h3>
           <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis perferendis ad impedit magnam ducimus asperiores blanditiis quaerat laborum. Repellat magnam numquam amet provident doloremque aliquam rerum a harum beatae doloribus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi, deleniti nam commodi dolorum quasi molestiae id beatae unde nemo, quam architecto cumque odio excepturi. Consectetur nam perspiciatis assumenda corporis nostrum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque tempora non qui, mollitia quasi facilis consectetur voluptates deserunt, optio aspernatur recusandae deleniti vero omnis magni, est officiis laboriosam at animi?</p>
         </div>
@@ -119,6 +133,11 @@
       navLinks.classList.toggle('nav-active');
       burger.classList.toggle('open');
     });
+
+    window.addEventListener("scroll", function () {
+    const navbar = document.querySelector(".navbar");
+    navbar.classList.toggle("scrolled", window.scrollY > 0);
+});
   </script>
 
 </body>
