scrolled nabnar mobile

--- a/index.html
+++ b/index.html
@@ -128,10 +128,12 @@
   <script>
     const burger = document.querySelector('.burger');
     const navLinks = document.querySelector('.nav-links');
+    const nav = document.querySelector('.navbar');
 
     burger.addEventListener('click', () => {
       navLinks.classList.toggle('nav-active');
       burger.classList.toggle('open');
+      nav.classList.toggle('scrolled-mini');
     });
 
     window.addEventListener("scroll", function () {
