--- a/index.html
+++ b/index.html
@@ -8,35 +8,37 @@
   <title>TI</title>
   <link rel="icon" type="image/svg+xml"
     href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22256%22 height=%22256%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 rx=%2250%22 fill=%22%232da6ff%22></rect><path d=%22M60.80 22.73L60.80 22.73Q61.25 23.45 61.65 24.66Q62.06 25.88 62.06 27.32L62.06 27.32Q62.06 29.75 60.93 31.01Q59.81 32.27 57.83 32.27L57.83 32.27L45.41 32.27L45.41 77.27Q44.69 77.45 43.16 77.72Q41.63 77.99 40.01 77.99L40.01 77.99Q36.59 77.99 35.15 76.73Q33.71 75.47 33.71 72.50L33.71 72.50L33.71 32.27L18.59 32.27Q18.14 31.46 17.73 30.29Q17.33 29.12 17.33 27.68L17.33 27.68Q17.33 25.16 18.45 23.95Q19.58 22.73 21.56 22.73L21.56 22.73L60.80 22.73ZM77.27 77.99L77.27 77.99Q73.85 77.99 72.41 76.73Q70.97 75.47 70.97 72.50L70.97 72.50L70.97 22.73Q71.78 22.55 73.31 22.28Q74.84 22.01 76.37 22.01L76.37 22.01Q79.61 22.01 81.14 23.18Q82.67 24.35 82.67 27.50L82.67 27.50L82.67 77.27Q81.86 77.45 80.38 77.72Q78.89 77.99 77.27 77.99Z%22 fill=%22%23fff%22></path></svg>" />
-  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="slider.css">
   <link rel="stylesheet" href="responsif.css">
+  <link rel="stylesheet" href="style.css">
+  <!-- font -->
+
   <style>
-      body::-webkit-scrollbar {
-        width: 0.5em;
-      }
+    body::-webkit-scrollbar {
+      width: 0.5em;
+    }
 
-      body::-webkit-scrollbar-track {
-        background: #242424;
-        -webkit-box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.3);
-      }
+    body::-webkit-scrollbar-track {
+      background: #242424;
+      -webkit-box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.3);
+    }
 
-      body::-webkit-scrollbar-thumb {
-        background-color: rgb(112, 190, 180);
-        outline: 1px solid rgb(0, 89, 255);
-      }
-      .scrolled {
-        background-color: rgb(112, 190, 180);
-        width: auto;
-        margin: 5px 20px 0 20px !important;
-        border-radius: 40px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2) !important;
-        transition: all 0.5s ease-in-out ;
-      }
-      
+    body::-webkit-scrollbar-thumb {
+      background-color: rgb(112, 190, 180);
+      outline: 1px solid rgb(0, 89, 255);
+    }
+
+    .scrolled {
+      background-color: rgb(112, 190, 180);
+      width: auto;
+      margin: 5px 20px 0 20px !important;
+      border-radius: 40px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2) !important;
+      transition: all 0.5s ease-in-out;
+    }
   </style>
 </head>
 
@@ -73,16 +75,8 @@
                 <div class="col-md-6"
                   style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
                   <div>
-                    <style>
-                      .title {
-                        font-family: 'Poppins', sans-serif;
-                        font-size: 50px;
-                        font-weight: 700;
-                        margin-bottom: 20px;
-                      }
-                    </style>
-                  <h1 class="title">Teknik Informatika</h1>
-                  <p>Unversitas Muhammadiyah Jember</p>
+                    <h1 class="title">Teknik Informatika</h1>
+                    <p>Unversitas Muhammadiyah Jember</p>
                   </div>
                 </div>
                 <div class="col-md-6"
@@ -115,16 +109,22 @@
     <section style="background-color: #f8f8f8 !important;">
       <div class="container" style="min-height: 100vh; display: flex; justify-content: center; align-items: center;">
         <div class="col-md-6" style="padding: 10px 100px;">
-            <img src="assets/img/test.png"
-              alt="Coffee" class="img-fluid rounded-circle">
+          <img src="assets/img/test.png" alt="Coffee" class="img-fluid rounded-circle">
         </div>
         <div class="col-md-6" style="padding: 0 50px;">
           <h3>Tentang</h3>
-          <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis perferendis ad impedit magnam ducimus asperiores blanditiis quaerat laborum. Repellat magnam numquam amet provident doloremque aliquam rerum a harum beatae doloribus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi, deleniti nam commodi dolorum quasi molestiae id beatae unde nemo, quam architecto cumque odio excepturi. Consectetur nam perspiciatis assumenda corporis nostrum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque tempora non qui, mollitia quasi facilis consectetur voluptates deserunt, optio aspernatur recusandae deleniti vero omnis magni, est officiis laboriosam at animi?</p>
+          <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis perferendis ad impedit magnam
+            ducimus asperiores blanditiis quaerat laborum. Repellat magnam numquam amet provident doloremque aliquam
+            rerum a harum beatae doloribus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi, deleniti
+            nam commodi dolorum quasi molestiae id beatae unde nemo, quam architecto cumque odio excepturi. Consectetur
+            nam perspiciatis assumenda corporis nostrum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
+            tempora non qui, mollitia quasi facilis consectetur voluptates deserunt, optio aspernatur recusandae
+            deleniti vero omnis magni, est officiis laboriosam at animi?</p>
         </div>
       </div>
     </section>
   </main>
+  <script src="slider.js"></script>
   <script>
     const burger = document.querySelector('.burger');
     const navLinks = document.querySelector('.nav-links');
@@ -137,9 +137,9 @@
     });
 
     window.addEventListener("scroll", function () {
-    const navbar = document.querySelector(".navbar");
-    navbar.classList.toggle("scrolled", window.scrollY > 0);
-});
+      const navbar = document.querySelector(".navbar");
+      navbar.classList.toggle("scrolled", window.scrollY > 0);
+    });
   </script>
 
 </body>
