--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <li><a href="#">Bernda</a></li>
       <li><a href="#">Tentang kami</a></li>
       <li><a href="#">Prestasi</a></li>
-      <li><a href="#">Pendaftaran</a></li>
+      <li><a href="#">Mini Quiz</a></li>
     </ul>
     <div class="burger">
       <div class="line"></div>
