--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
       <a href="#">Your Logo</a>
     </div>
     <ul class="nav-links">
-      <li><a href="#">Bernda</a></li>
+      <li><a href="#">Beranda</a></li>
       <li><a href="#">Tentang kami</a></li>
       <li><a href="#">Prestasi</a></li>
-      <li><a href="#">Mini Quiz</a></li>
+      <li><a href="forkafest.html">Forkafest</a></li>
     </ul>
     <div class="burger">
       <div class="line"></div>
