--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
       <a href="#">Your Logo</a>
     </div>
     <ul class="nav-links">
-      <li><a href="#">Bernda</a></li>
+      <li><a href="#">Beranda</a></li>
       <li><a href="#">Tentang kami</a></li>
       <li><a href="#">Prestasi</a></li>
+      <li><a href="#">Forkafest</a></li>
       <li><a href="#">Mini Quiz</a></li>
     </ul>
     <div class="burger">
