--- a/forkafest.html
+++ b/forkafest.html
@@ -126,18 +126,19 @@
       }
     </style>
     <section class="about" style="background-color: #f8f8f8 !important;">
-      <div class="container" style="min-height: 100vh; display: flex; justify-content: center; align-items: center;">
-        <div class="row">
-        <div class="col-md-6" style="padding: 10px 100px;">
+      <div class="container-fluid" style="min-height: 100vh; display: flex; justify-content: center; align-items: center;">
+        <div class="row" style="width: 90%; padding: 10px;">
+        <div class="col-md-6">
           <h1  class="forkafest">Forkafest 2023</h1>
-          <p>"Meningkatkan kreativitas  generasi muda dengan teknologi digital dalam menghadapi  era society 5.0"</p><br>
-            <p id="peace" class="countdown"></p><br>
+          
+            <p id="peace" class="countdown"></p>
             <ul class="jam">
               <li>Hari</li>
               <li>Jam</li>
               <li>Menit</li>
               <li>Detik</li>
             </ul>
+            <p>"Meningkatkan kreativitas generasi muda dengan teknologi digital dalam menghadapi era society 5.0"</p>
         </div>
         <div class="col-md-6" style="padding: 0 50px;">
           <img>
@@ -802,7 +803,6 @@
         class="transition-all duration-300 ease-in-out delay-150 path-2" transform="rotate(-180 720 200)"></path>
     </svg>
   </main>
-  <script src="slider.js"></script>
   <script>
     const burger = document.querySelector('.burger');
     const navLinks = document.querySelector('.nav-links');
